RIPE NCC has merged 11a030be0
* Update node Docker tag to v22 [42ee05bee]
* Update dependency org.eclipse.jgit:org.eclipse.jgit to v6 [447b855d2]
* Cleanup left-over 'authorization.admin.role' in profiles [da3e72785]
* Update dependency org.sonarqube:org.sonarqube.gradle.plugin to v5 [1adb4a140]
* Update dependency io.sentry:sentry-bom to v7 [d3a369f76]
* Update dependency commons-codec:commons-codec to v1.17.0 [df69caf44]
* Refactor Mac initialisation [f29622783]
* Update dependency com.gorylenko.gradle-git-properties:com.gorylenko.gradle-git-properties.gradle.plugin to v2.4.2 [6f8670965]
* More Sonarqube quirks [38a6f0e38]
* Sonarqube issues [b69e7e8bc]
* Better error messages [50baec128]
* Formatting [b8f2f3aa4]
* Make tokens URL-safe [8315ccd6b]
* Use proper hmac, higher entropy secrets [f8063063c]
* Include a unique id from the CA into the email unsubscribe token [76d67e240]
* Use global secret instead of per-configuration token [d790f1417]
* Include URL in RRDP duration tracker [d379c9d3c]
* DBProvider 1.6 [c1344ea79]
* Update dependency org.wiremock:wiremock-jetty12 to v3.5.4 [0fb6ccc99]
* Fix compilation [89122afc0]
* Fix migration numbers [11d0c758b]
* Add authentication-first URL [ea5f7806e]
* Revert error processing in the method [32f355f88]
* Syntax fix [c1dd5814d]
* Fix response building [c1d4c0959]
* Error handling [a37cf9900]
* Introduce separate alertUnsubscribeUri property [c7e8a1cbf]
* Use PathVariables like all the other code does [de7f52739]
* Fix NULL value [05db29b46]
* Fix tests [a9b551ad1]
* Delete unused method [2bd5eb3ca]
* Improve email template tests [e4aa937d7]
* Extend templates with unsubscribe URL [ebff2c8ec]
* Pass around unsubscribeToken [9885d1432]
* Cleanup smells [8be42f963]
* Cleanup imports [cac48e104]
* Refactor [5378dd72c]
* Add unsubscribeToken [cd583ee56]
* Formatting [5c9adc0d3]
* Add unsubscribeToken field [58278c3c9]
* Use commands to unsubscribe [005824705]
* Fix broken tests [185ac4e72]
* Add unsubscribe API end-point 